syntax = "proto3";
option csharp_namespace = "SakuraLibrary.Proto";

import "user.proto";
import "node.proto";
import "tunnel.proto";

message Log {
  string source = 1;
  string data = 2;
  int32 category = 3;
  uint32 time = 4;
}

message LogList { repeated Log data = 3; }

message ServiceConfig {
  bool bypass_proxy = 1;
  int32 update_interval = 2;
  bool remote_management = 3;
  bool remote_key_set = 4;
  string remote_key_new = 5;
  bool enable_frpc_tls = 6;
}

message UpdateStatus {
  bool update_available = 1;
  string update_ready_dir = 2;

  uint32 download_current = 3;
  uint32 download_total = 4;

  string note = 5;
  
  bool update_manager_running = 6;
}

enum MessageID {
  USER_LOGIN = 0;
  USER_LOGOUT = 1;
  USER_INFO = 2;
  TUNNEL_LIST = 3;
  TUNNEL_RELOAD = 4;
  TUNNEL_UPDATE = 5;
  TUNNEL_DELETE = 8;
  TUNNEL_CREATE = 9;
  LOG_GET = 6;
  LOG_CLEAR = 7;
  NODE_LIST = 10;
  NODE_RELOAD = 11;
  CONTROL_EXIT = 12;
  CONTROL_CONFIG_GET = 13;
  CONTROL_CONFIG_SET = 14;
  CONTROL_CHECK_UPDATE = 15;
  CONTROL_GET_UPDATE = 16;
}

message ResponseBase {
  bool success = 1;
  string message = 2;

  oneof data {
    User data_user = 3;
    Tunnel data_tunnel = 4;
    TunnelList data_tunnels = 5;
    LogList data_log = 7;
    NodeList data_nodes = 6;
    ServiceConfig data_config = 8;
    UpdateStatus data_update = 9;
  }
}

message RequestBase {
  MessageID type = 1;

  oneof data {
    int32 data_id = 2;
    string data_string = 7; // For frpc, currently unused in launcher

    UserLogin data_user_login = 3;
    UpdateTunnelStatus data_update_tunnel = 4;
    CreateTunnel data_create_tunnel = 5;
    ServiceConfig data_config = 6;
  }
}

enum PushMessageID {
  UPDATE_USER = 0;
  UPDATE_TUNNEL = 1;
  UPDATE_TUNNELS = 2;
  UPDATE_NODES = 3;
  APPEND_LOG = 4;
  PUSH_UPDATE = 5;
  PUSH_CONFIG = 6;
}

message PushMessageBase {
  PushMessageID type = 1;

  oneof data {
    User data_user = 3;
    Tunnel data_tunnel = 4;
    TunnelList data_tunnels = 5;
    NodeList data_nodes = 6;
    LogList data_log = 7;
    UpdateStatus data_update = 8;
    ServiceConfig data_config = 9;
  }
}
